unpackaged/main/default/objects/Account/fields/Card_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Card_Recognition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Card Recognition</label>
    <type>Checkbox</type>
</CustomField>