unpackaged/main/default/objects/Account/fields/Card_Schemes_Offered_for_DCC__c.field-meta.xml
<CustomField>
    <fullName>Card_Schemes_Offered_for_DCC__c</fullName>
    <label>Card Schemes Offered for DCC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>