unpackaged/main/default/objects/Account/fields/Cash_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Cash_Credit_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash\Credit Card</label>
    <type>Checkbox</type>
</CustomField>