unpackaged/main/default/objects/Account/fields/CBA__c.field-meta.xml
<CustomField>
    <fullName>CBA__c</fullName>
    <label>CBA</label>
    <length>8</length>
    <type>Text</type>
</CustomField>