unpackaged/main/default/objects/Account/fields/Child_Sub_Brands__c.field-meta.xml
<CustomField>
    <fullName>Child_Sub_Brands__c</fullName>
    <label>Child Sub-Brands</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>