unpackaged/main/default/objects/Account/fields/Clearing__c.field-meta.xml
<CustomField>
    <fullName>Clearing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clearing</label>
    <type>Checkbox</type>
</CustomField>