unpackaged/main/default/objects/Account/fields/Cluster_Parking_and_Partner__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Parking_and_Partner__c</fullName>
    <formula>CASE( TEXT(Owning_Country__c),
&quot;Argentina&quot;,&quot;Americas&quot;,
&quot;Aruba&quot;,&quot;Americas&quot;,
&quot;Austria&quot;,&quot;EMEIA&quot;,
&quot;Australia&quot;,&quot;APAC&quot;,
&quot;Bahrain&quot;,&quot;APAC&quot;,
&quot;Barbados&quot;,&quot;Americas&quot;,
&quot;Belgium&quot;,&quot;EMEIA&quot;,
&quot;Belize&quot;,&quot;Americas&quot;,
&quot;Bolivia&quot;,&quot;Americas&quot;,
&quot;Brazil&quot;,&quot;Americas&quot;,
&quot;Bulgaria&quot;,&quot;EMEIA&quot;,
&quot;Cambodia&quot;,&quot;APAC&quot;,
&quot;Canada&quot;,&quot;Americas&quot;,
&quot;Chile&quot;,&quot;Americas&quot;,
&quot;China&quot;,&quot;APAC&quot;,
&quot;Colombia&quot;,&quot;Americas&quot;,
&quot;Costa Rica&quot;,&quot;Americas&quot;,
&quot;Croatia&quot;,&quot;EMEIA&quot;,
&quot;Cyprus&quot;,&quot;EMEIA&quot;,
&quot;Czech Republic&quot;,&quot;EMEIA&quot;,
&quot;Denmark&quot;,&quot;EMEIA&quot;,
&quot;Dominican Republic&quot;,&quot;Americas&quot;,
&quot;Ecuador&quot;,&quot;Americas&quot;,
&quot;Egypt&quot;,&quot;EMEIA&quot;,
&quot;El Salvador&quot;,&quot;Americas&quot;,
&quot;Estonia&quot;,&quot;EMEIA&quot;,
&quot;Faroe Islands&quot;,&quot;EMEIA&quot;,
&quot;Finland&quot;,&quot;EMEIA&quot;,
&quot;France&quot;,&quot;EMEIA&quot;,
&quot;French West Indies&quot;,&quot;Americas&quot;,
&quot;Germany&quot;,&quot;EMEIA&quot;,
&quot;Gibraltar&quot;,&quot;EMEIA&quot;,
&quot;Greece&quot;,&quot;EMEIA&quot;,
&quot;Guatemala&quot;,&quot;Americas&quot;,
&quot;Honduras&quot;,&quot;Americas&quot;,
&quot;Hong Kong&quot;,&quot;APAC&quot;,
&quot;Hungary&quot;,&quot;EMEIA&quot;,
&quot;Iceland&quot;,&quot;EMEIA&quot;,
&quot;India&quot;,&quot;EMEIA&quot;,
&quot;Indonesia&quot;,&quot;APAC&quot;,
&quot;Ireland&quot;,&quot;EMEIA&quot;,
&quot;Israel&quot;,&quot;EMEIA&quot;,
&quot;Italy&quot;,&quot;EMEIA&quot;,
&quot;Jamaica&quot;,&quot;Americas&quot;,
&quot;Japan&quot;,&quot;APAC&quot;,
&quot;Jordan&quot;,&quot;EMEIA&quot;,
&quot;Kazakhstan&quot;,&quot;EMEIA&quot;,
&quot;Kenya&quot;,&quot;EMEIA&quot;,
&quot;Latvia&quot;,&quot;EMEIA&quot;,
&quot;Lebanon&quot;,&quot;EMEIA&quot;,
&quot;Lithuania&quot;,&quot;EMEIA&quot;,
&quot;Luxembourg&quot;,&quot;EMEIA&quot;,
&quot;Macau&quot;,&quot;APAC&quot;,
&quot;Malaysia&quot;,&quot;APAC&quot;,
&quot;Maldives&quot;,&quot;APAC&quot;,
&quot;Malta&quot;,&quot;EMEIA&quot;,
&quot;Mexico&quot;,&quot;Americas&quot;,
&quot;Monaco&quot;,&quot;EMEIA&quot;,
&quot;Myanmar&quot;,&quot;APAC&quot;,
&quot;Netherlands&quot;,&quot;EMEIA&quot;,
&quot;Nicaragua&quot;,&quot;Americas&quot;,
&quot;Norway&quot;,&quot;EMEIA&quot;,
&quot;Panama&quot;,&quot;Americas&quot;,
&quot;Pakistan&quot;,&quot;APAC&quot;,
&quot;Paraguay&quot;,&quot;Americas&quot;,
&quot;Peru&quot;,&quot;Americas&quot;,
&quot;Philippines&quot;,&quot;APAC&quot;,
&quot;Poland&quot;,&quot;EMEIA&quot;,
&quot;Portugal&quot;,&quot;EMEIA&quot;,
&quot;Puerto Rico&quot;,&quot;Americas&quot;,
&quot;Qatar&quot;,&quot;EMEIA&quot;,
&quot;Republic of Korea&quot;,&quot;APAC&quot;,
&quot;Romania&quot;,&quot;EMEIA&quot;,
&quot;Russian Federation&quot;,&quot;EMEIA&quot;,
&quot;Saudi Arabia&quot;,&quot;EMEIA&quot;,
&quot;Singapore&quot;,&quot;APAC&quot;,
&quot;Slovak Republic&quot;,&quot;EMEIA&quot;,
&quot;Slovenia&quot;,&quot;EMEIA&quot;,
&quot;South Africa&quot;,&quot;EMEIA&quot;,
&quot;Spain&quot;,&quot;EMEIA&quot;,
&quot;Sri Lanka&quot;,&quot;APAC&quot;,
&quot;Sweden&quot;,&quot;EMEIA&quot;,
&quot;Switzerland&quot;,&quot;EMEIA&quot;,
&quot;Taiwan&quot;,&quot;APAC&quot;,
&quot;Thailand&quot;,&quot;APAC&quot;,
&quot;The Bahamas&quot;,&quot;Americas&quot;,
&quot;Trinidad and Tobago&quot;,&quot;Americas&quot;,
&quot;Turkey&quot;,&quot;EMEIA&quot;,
&quot;United Arab Emirates&quot;,&quot;EMEIA&quot;,
&quot;United Kingdom&quot;,&quot;UK &amp; Ireland &amp; NA&quot;,
&quot;United States&quot;,&quot;Americas&quot;,
&quot;Uruguay&quot;,&quot;Americas&quot;,
&quot;Vietnam&quot;,&quot;APAC&quot;,
&quot;APAC&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cluster Parking and Partner</label>
    <type>Text</type>
</CustomField>