unpackaged/main/default/objects/Account/fields/Cluster_Region__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Region__c</fullName>
    <description>Requested by Dav @ Finance 27/1/22</description>
    <formula>IF(TEXT(Company_Sector__c)=&quot;Hospitality&quot;,

Cluster_Hospitality__c ,

IF( TEXT(Company_Sector__c) = &quot;Retail&quot;,

Cluster_Retail__c ,

IF(TEXT(Company_Sector__c)=&quot;Parking&quot; || TEXT(Company_Sector__c)=&quot;Financial Partner&quot;,

Cluster_Parking_and_Partner__c ,

&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cluster Region</label>
    <type>Text</type>
</CustomField>