unpackaged/main/default/objects/Account/fields/Competitor_Shop__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Shop__c</fullName>
    <formula>IF(AND(OR(TEXT(Type) =  &quot;Prospect&quot;, TEXT(Type) =  &quot;Lost&quot;), TEXT(Parent.Type) = &quot;Active&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Shop</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>