unpackaged/main/default/objects/Account/fields/Compliance_with_their_Code_of_Conduct__c.field-meta.xml
<CustomField>
    <fullName>Compliance_with_their_Code_of_Conduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance with their Code of Conduct?</label>
    <type>Checkbox</type>
</CustomField>