unpackaged/main/default/objects/Account/fields/Connection_to_Till__c.field-meta.xml
<CustomField>
    <fullName>Connection_to_Till__c</fullName>
    <label>Connection to Till</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>