unpackaged/main/default/objects/Account/fields/Contact_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Contact_Relationships__c</fullName>
    <formula>IF(Contact_Score__c &gt;= 1000, IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcv&quot;, &quot;Green&quot;,19, 19), 
IF(AND(Contact_Score__c &lt; 1000, Contact_Score__c &gt;= 250), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcq&quot;, &quot;Amber&quot;,19, 19), 
IF(AND(Contact_Score__c &lt; 250,Contact_Score__c &gt;= 50), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcl&quot;, &quot;Red&quot;,19, 19), 
IF(Contact_Score__c &lt; 50, IMAGE(&quot;/servlet/servlet.FileDownload?file=0151o000005ZAJ2&quot;, &quot;Alert&quot;,19, 19), &quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Relationships</label>
    <type>Text</type>
</CustomField>