unpackaged/main/default/objects/Account/fields/Contact_Score__c.field-meta.xml
<CustomField>
    <fullName>Contact_Score__c</fullName>
    <label>Contact Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>