unpackaged/main/default/objects/Account/fields/Contract_Received__c.field-meta.xml
<CustomField>
    <fullName>Contract_Received__c</fullName>
    <label>Contract Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>