unpackaged/main/default/objects/Account/fields/Converted_Current_SIS__c.field-meta.xml
<CustomField>
    <fullName>Converted_Current_SIS__c</fullName>
    <label>Converted Current SIS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>