unpackaged/main/default/objects/Account/fields/Converted_Eligible_SIS__c.field-meta.xml
<CustomField>
    <fullName>Converted_Eligible_SIS__c</fullName>
    <label>Converted Eligible SIS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>