unpackaged/main/default/objects/Account/fields/Country_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Country_Recognition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Country Recognition</label>
    <type>Checkbox</type>
</CustomField>