unpackaged/main/default/objects/Account/fields/Ctrip__c.field-meta.xml
<CustomField>
    <fullName>Ctrip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ctrip</label>
    <type>Checkbox</type>
</CustomField>