unpackaged/main/default/objects/Account/fields/Current_eComm_DCC_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_eComm_DCC_Provider__c</fullName>
    <label>Current eComm DCC Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DCC_Providers</valueSetName>
    </valueSet>
</CustomField>