unpackaged/main/default/objects/Account/fields/Current_POS_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_POS_Contract_End_Date__c</fullName>
    <description>Hoist - Saurabh 20/01/22</description>
    <label>Current POS Contract End Date</label>
    <type>Date</type>
</CustomField>