unpackaged/main/default/objects/Account/fields/Datatrans_Product__c.field-meta.xml
<CustomField>
    <fullName>Datatrans_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Datatrans Product</label>
    <type>Checkbox</type>
</CustomField>