unpackaged/main/default/objects/Account/fields/Date_Left__c.field-meta.xml
<CustomField>
    <fullName>Date_Left__c</fullName>
    <label>Date Left</label>
    <type>Date</type>
</CustomField>