unpackaged/main/default/objects/Account/fields/Date_Won_from_Competition__c.field-meta.xml
<CustomField>
    <fullName>Date_Won_from_Competition__c</fullName>
    <label>Date Won from Competition</label>
    <type>Date</type>
</CustomField>