unpackaged/main/default/objects/Account/fields/DCC_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>DCC_Account_Id__c</fullName>
    <externalId>true</externalId>
    <label>DCC Account Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>