unpackaged/main/default/objects/Account/fields/DCC_Annual_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>DCC_Annual_Gross_Profit__c</fullName>
    <label>DCC Annual Gross Profit</label>
    <summarizedField>Opportunity.DCC_Annual_Gross_Profit1__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>