unpackaged/main/default/objects/Account/fields/DCC_Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>DCC_Current_Provider__c</fullName>
    <label>DCC : Current Provider</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Owning_Country__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adyen</fullName>
            </value>
            <value>
                <fullName>Alpha Bank</fullName>
            </value>
            <value>
                <fullName>Applepay</fullName>
            </value>
            <value>
                <fullName>Banca March</fullName>
            </value>
            <value>
                <fullName>Banca Sella</fullName>
            </value>
            <value>
                <fullName>Banco Mare Nostrum</fullName>
            </value>
            <value>
                <fullName>Banco Popular</fullName>
            </value>
            <value>
                <fullName>Banco Sabadell</fullName>
            </value>
            <value>
                <fullName>Banco Santander</fullName>
            </value>
            <value>
                <fullName>Bankia</fullName>
            </value>
            <value>
                <fullName>BankInter</fullName>
            </value>
            <value>
                <fullName>Bank of Ireland</fullName>
            </value>
            <value>
                <fullName>Barclays</fullName>
            </value>
            <value>
                <fullName>BBVA</fullName>
            </value>
            <value>
                <fullName>B Payment</fullName>
            </value>
            <value>
                <fullName>BS Payone GmbH</fullName>
            </value>
            <value>
                <fullName>CaixaBank</fullName>
            </value>
            <value>
                <fullName>Cajas Rurales Unidas</fullName>
            </value>
            <value>
                <fullName>Catalunya Banc</fullName>
            </value>
            <value>
                <fullName>ConCardis</fullName>
            </value>
            <value>
                <fullName>Deutsche Bank</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>Euronet</fullName>
            </value>
            <value>
                <fullName>EuroNet / Pure Commerce</fullName>
            </value>
            <value>
                <fullName>Euronet Worldwide</fullName>
            </value>
            <value>
                <fullName>Fexco</fullName>
            </value>
            <value>
                <fullName>Fexco/Global Payment</fullName>
            </value>
            <value>
                <fullName>Fexco/Omnipay</fullName>
            </value>
            <value>
                <fullName>Global Blue</fullName>
            </value>
            <value>
                <fullName>HSBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>