unpackaged/main/default/objects/Account/fields/DCC_Customer_Reporting__c.field-meta.xml
<CustomField>
    <fullName>DCC_Customer_Reporting__c</fullName>
    <formula>HYPERLINK(&quot;http://iedc-ptf-pav006/Reports/Pages/Folder.aspx?ItemPath=%2fFintrax+Customer+Reports%2fDCC+Reports&quot;, &quot;Click Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DCC Customer Reporting</label>
    <type>Text</type>
</CustomField>