unpackaged/main/default/objects/Account/fields/DCC_Gateway__c.field-meta.xml
<CustomField>
    <fullName>DCC_Gateway__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DCC Gateway</label>
    <type>Checkbox</type>
</CustomField>