unpackaged/main/default/objects/Account/fields/DCC_Margin_Mark_Up__c.field-meta.xml
<CustomField>
    <fullName>DCC_Margin_Mark_Up__c</fullName>
    <label>DCC Margin Mark Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>