unpackaged/main/default/objects/Account/fields/Deals_with_Personal_Data__c.field-meta.xml
<CustomField>
    <fullName>Deals_with_Personal_Data__c</fullName>
    <label>Deals with Personal Data?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>