unpackaged/main/default/objects/Account/fields/Dec_Value__c.field-meta.xml
<CustomField>
    <fullName>Dec_Value__c</fullName>
    <label>Dec Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>