unpackaged/main/default/objects/Account/fields/E_Com_PSP__c.field-meta.xml
<CustomField>
    <fullName>E_Com_PSP__c</fullName>
    <label>E-Com PSP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PSP</valueSetName>
    </valueSet>
</CustomField>