unpackaged/main/default/objects/Account/fields/E_Comm__c.field-meta.xml
<CustomField>
    <fullName>E_Comm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Comm</label>
    <type>Checkbox</type>
</CustomField>