unpackaged/main/default/objects/Account/fields/Ecommerce_Solution__c.field-meta.xml
<CustomField>
    <fullName>Ecommerce_Solution__c</fullName>
    <description>Proximis Retail Field - Saurabh 30/03/2022</description>
    <label>Ecommerce Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Magento</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SAP Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>SoCloz</fullName>
            </value>
            <value>
                <fullName>Spree</fullName>
            </value>
            <value>
                <fullName>WooCommerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>