unpackaged/main/default/objects/Account/fields/Ecommerce_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Ecommerce_Turnover__c</fullName>
    <description>Proximis Retail Field - Saurabh 30/03/2022</description>
    <label>Ecommerce Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>