unpackaged/main/default/objects/Account/fields/Ethidad__c.field-meta.xml
<CustomField>
    <fullName>Ethidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ethidad</label>
    <type>Checkbox</type>
</CustomField>