unpackaged/main/default/objects/Account/fields/External_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Passport_Number__c</fullName>
    <externalId>true</externalId>
    <label>External Passport Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>