unpackaged/main/default/objects/Account/fields/External_Premier_Pass_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Premier_Pass_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Premier Pass ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>