unpackaged/main/default/objects/Account/fields/External_Tax_System_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Tax_System_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>External Tax System ID. For TRS use the full TRS code. #####|###|TRS. For PTF use Store Code. Contact BI Team for support</inlineHelpText>
    <label>External Tax System ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>