unpackaged/main/default/objects/Account/fields/FastRefund__c.field-meta.xml
<CustomField>
    <fullName>FastRefund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FastRefund</label>
    <type>Checkbox</type>
</CustomField>