unpackaged/main/default/objects/Account/fields/Feb_Value__c.field-meta.xml
<CustomField>
    <fullName>Feb_Value__c</fullName>
    <label>Feb Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>