unpackaged/main/default/objects/Account/fields/FiscalTextFile_PII__c.field-meta.xml
<CustomField>
    <fullName>FiscalTextFile_PII__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used on Provider record type for available page layouts.</description>
    <label>FiscalTextFile (PII)</label>
    <type>Checkbox</type>
</CustomField>